[package]
name = "artemia"
version = "0.1.0"
edition = "2021"
authors = ["alpha"]
description = "A simple example of using the Cloudflare Workers API"
repository = "https://github.com/alphathekiwi/artemia.git"
license = "Apache-2.0"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.1", features = ['http'] }
worker-macros = { version = "0.4.1", features = ['http'] }
# console_error_panic_hook = { version = "0.1.1" }
http = "1.1.0"
tracing = "0.1.40"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ['time', 'json'] }
time = { version = "0.3.36", features = ['wasm-bindgen'] }

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
